--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,41 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto,arial,sans-serif;
 }
 
-.centered{
-    margin: 0 auto;
-    text-align: center;
+body{
+    line-height: 1.54;
+    font-size: 0.875rem;
+    font-weight: 400
 }
+
+/* CORPO DELLA PAGINA */
+.centered{
+    width: 800px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+main{
+    padding-top: 60px;
+}
+
+span{
+    color: #3367d6;
+    cursor: pointer;
+}
+
+h2{
+    color: #3c4043;
+}
+
+.my-medium{
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.mx-small{
+    margin-left: 20px;
+}
+/* CORPO DELLA PAGINA */
