--- a/styles/style.css
+++ b/styles/style.css
@@ -94,3 +94,32 @@ a{
     padding-left: 20px;
     cursor: pointer;
 }
+/* HEADER DELLA PAGINA CON IL MENU E IL PROFILO */
+
+/* FOOTER */
+footer{
+    background-color: #f5f5f5;
+    padding: 15px;
+    margin-top: 30px;
+}
+
+.container-footer{
+    width: 800px;
+    margin: 0 auto;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer li{
+    display: inline;
+    padding-right: 15px;
+}
+
+.a-footer{
+    font-size: 11px;
+}
+
+.blue-cloud{
+    color: #3367d6;
+}
